--- a/Tests/fixtures/phablet.yml
+++ b/Tests/fixtures/phablet.yml
@@ -6950,3 +6950,21 @@
     model: Galaxy Note 20 Ultra 5G
   os_family: Android
   browser_family: Chrome
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 10; ZTE 8010RU) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.216 YaApp_Android/21.51.1 YaSearchBrowser/21.51.1 BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.51.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: phablet
+    brand: ZTE
+    model: Blade V2020 Smart
+  os_family: Android
+  browser_family: Unknown
