--- a/Tests/fixtures/tablet-6.yml
+++ b/Tests/fixtures/tablet-6.yml
@@ -1458,3 +1458,21 @@
     model: Ursus H310
   os_family: Android
   browser_family: Unknown
+-
+  user_agent: Mozilla/5.0 (Linux; arm_64; Android 10; TZ200) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 YaApp_Android/21.50.1/apad YaSearchBrowser/21.50.1/apad BroPP/1.0 SA/3 Mobile Safari/537.36
+  os:
+    name: Android
+    version: "10"
+    platform: ARM
+  client:
+    type: browser
+    name: Yandex Browser
+    version: 21.50.1
+    engine: Blink
+    engine_version: ""
+  device:
+    type: tablet
+    brand: Irbis
+    model: TZ200
+  os_family: Android
+  browser_family: Unknown
